--- a/package.json
+++ b/package.json
@@ -1,38 +1,25 @@
 {
-  "name": "book-store-web-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "assignment1",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.2.3",
     "eslint-plugin-react": "^7.32.2",
-    "create-react-app": "^5.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "4.0.3",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Souvik-Jha/book-store-web-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Souvik-Jha/book-store-web-app/issues"
-  },
-  "homepage": "https://github.com/Souvik-Jha/book-store-web-app#readme",
   "eslintConfig": {
     "extends": [
       "react-app",
